# iron-tracker

./: .gitignore  AUDIT_REPORT.md  CLAUDE.md  README.md  netlify.toml  render.yaml
.claude/agents/: backend-specialist.md  data-science-expert.md  database-specialist.md  deployment-specialist.md  fitness-domain-expert.md  frontend-specialist.md  qa-reviewer.md  security-specialist.md  software-architect.md  sports-medicine-expert.md  ux-ui-specialist.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: backend-ci.yml  frontend-ci.yml  weekly-trends-cron.yml
backend/: .env.example  pyproject.toml  ruff.toml
backend/app/: auth.py  config.py  main.py  sentry.py
backend/app/models/: schemas.py
backend/app/routers/: advanced_analytics.py  ai.py  analytics.py
backend/app/services/: acwr_service.py  ai_service.py  analysis_service.py  analytics_service.py  antagonist_balance_service.py  bilateral_asymmetry_service.py  body_composition_service.py  body_measurements_service.py  composite_score_service.py  consistency_service.py  equipment_efficiency_service.py  exercise_profile_service.py  exercise_variety_service.py  fitness_fatigue_service.py  injury_awareness_service.py  load_distribution_service.py  mesocycle_effectiveness_service.py  milestone_velocity_service.py  muscle_frequency_service.py  muscle_workload_service.py  nutrition_performance_service.py  performance_forecast_service.py  periodization_service.py  plan_adherence_service.py  progressive_overload_service.py  recovery_service.py  relative_strength_service.py  rest_analysis_service.py  session_quality_service.py  sleep_performance_service.py  soreness_patterns_service.py  staleness_service.py  strength_standards_service.py  substitution_patterns_service.py  tempo_analysis_service.py  time_performance_service.py  training_density_service.py  training_readiness_service.py  utils.py  volume_landmarks_service.py  (+1 more)
backend/tests/: conftest.py  test_advanced_analytics.py  test_ai.py  test_analysis.py  test_analytics.py  test_auth.py  test_config.py  test_deep_analytics.py  test_health.py  test_new_analytics.py  test_phase2_analytics.py  test_wave2_analytics.py  test_wave3_analytics.py  test_weekly_summary_service.py
docs/: ANALYTICS-API.md  GAP_IMPLEMENTATION_PLAN.md  IronTracker_Addendum_Datasets_GymEntity.docx  IronTracker_DesignDocument.docx  IronTracker_PRD.docx  IronTracker_UIUX_Spec.docx
docs/deployment/: CLAUDE-CODE-DESKTOP-PROMPT.md  (+2 more)
frontend/: .env.example  .eslintrc.cjs  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
scripts/: backfill_image_urls.py  pre-commit-check.sh  pre-deploy-check.sh  seed_exercises.py  seed_via_api.py
supabase/: config.toml
(+299 files in other folders)
