[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iron-tracker-api"
version = "0.1.0"
description = "Iron Tracker gym tracking PWA backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "pydantic-settings",
    "httpx",
    "asyncpg",
    "python-jose[cryptography]",
    "python-multipart",
    "anthropic",
    "sentry-sdk[fastapi,asyncpg]",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "httpx",
    "ruff",
    "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["__pycache__", "\\.venv"]

[[tool.mypy.overrides]]
module = [
    "app.services.ai_service",
    "app.services.analysis_service",
    "app.sentry",
]
disable_error_code = ["union-attr", "list-item", "arg-type"]

[[tool.mypy.overrides]]
module = "app.config"
disable_error_code = ["call-arg"]
