[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iron-tracker-api"
version = "0.1.0"
description = "Iron Tracker gym tracking PWA backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "httpx>=0.27,<1.0",
    "asyncpg>=0.29,<0.31",
    "PyJWT[cryptography]>=2.8,<3.0",
    "python-multipart>=0.0.12,<1.0",
    "anthropic>=0.87,<1.0",
    "sentry-sdk[fastapi,asyncpg]>=2.0,<3.0",
    "pygments>=2.20",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "httpx",
    "ruff",
    "mypy",
    "pip-audit",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
exclude = ["__pycache__", "\\.venv"]

[[tool.mypy.overrides]]
module = [
    "app.services.ai_service",
    "app.services.analysis_service",
    "app.sentry",
]
disable_error_code = ["union-attr", "list-item", "arg-type"]

[[tool.mypy.overrides]]
module = "app.config"
disable_error_code = ["call-arg"]
